tests/baselines/reference/parserForOfStatement3.errors.txt
tests/cases/conformance/parser/ecmascript6/Iterators/parserForOfStatement3.ts(1,13): error TS1188: Only a single variable declaration is allowed in a 'for...of' statement.
tests/cases/conformance/parser/ecmascript6/Iterators/parserForOfStatement3.ts(1,18): error TS2304: Cannot find name 'X'.


==== tests/cases/conformance/parser/ecmascript6/Iterators/parserForOfStatement3.ts (2 errors) ====
    for (var a, b of X) {
                ~
!!! error TS1188: Only a single variable declaration is allowed in a 'for...of' statement.
                     ~
!!! error TS2304: Cannot find name 'X'.
    }